# RayTracer

./: .gitignore  CMakeLists.txt  Readme.md  camera.cpp  camera.h  cornell_box.json  element.h  light.cpp  light.h  main.cpp  mini_cornell.json  plane.cpp  plane.h  scene.cpp  scene.h  sphere.cpp  sphere.h  types.h
